[package]
name = "openssl-sys"
version = "0.9.65"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"

[features]
vendored = []
vendored-openssl111 = ['openssl-src']
vendored-openssl101f = ['openssl-src', 'openssl-src/openssl101f']
vendored-openssl102u = ['openssl-src', 'openssl-src/openssl102u']
vendored-libressl = ['libressl-src']
sancov = ['openssl-src/sancov', 'libressl-src/sancov']
no-rand = ['openssl-src/no-rand'] # todo Missing for libressl
asan = ['openssl-src/asan'] # todo Missing for libressl
weak-crypto = ['openssl-src/weak-crypto'] # todo Missing for libressl

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
openssl-src = { path = "../../rust-openssl-src", optional = true, features = []}
libressl-src = { path = "../../rust-libressl-src", optional = true, features = []}
pkg-config = "0.3.9"
autocfg = "1.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"

